# the-path-of-junior

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  README.md
src/data-structures/: CMakeLists.txt  README.md  data-struct_1.cpp  data-struct_2.cpp  data-struct_3.cpp  data-struct_4.cpp  data-struct_5.cpp  data-struct_6.cpp  data-struct_7.cpp  data-struct_8.cpp
src/other/: CMakeLists.txt  README.md  cast_1.cpp  cast_2.cpp  delegating-constructors.cpp  delegating-constructors_1.cpp  exceptions_1.cpp  exceptions_2.cpp  exceptions_3.cpp  function-overload_1.cpp  function_1.cpp  functor_1.cpp  lambda_1.cpp  predicate_1.cpp  try-catch1.cpp  typedef_1.cpp
src/other/delegating-constructors/: CMakeLists.txt  delegating-constructors.cpp
src/stl/: CMakeLists.txt  README.md  stl_1.cpp  stl_10.cpp  stl_2.cpp  stl_3.cpp  stl_4.cpp  stl_5.cpp  stl_6.cpp  stl_7.cpp  stl_8.cpp  stl_9.cpp  stl_algorithms.cpp
src/templates/: CMakeLists.txt  README.md  templates_1.cpp  templates_2.cpp  templates_3.cpp  templates_4.cpp
src/virtual-functions/: CMakeLists.txt  README.md  virtual.md  virtual2.cpp  virtual4.cpp  virtual5.cpp  virtual6.cpp  virtual7.cpp  virtual8.cpp  virtual9.cpp  virtual_1.cpp  virtual_2.cpp  virtual_3.cpp  virtual_4.cpp  virtual_5.cpp  virtual_6.cpp  virtual_7.cpp  virtual_8.cpp  virtual_9.cpp
src/virtual-functions/virtual1/: CMakeLists.txt  virtual1.cpp
src/virtual-functions/virtual2/: CMakeLists.txt  virtual2.cpp
src/virtual-functions/virtual3/: CMakeLists.txt  virtual3.cpp
src/virtual-functions/virtual4/: CMakeLists.txt  virtual4.cpp
src/virtual-functions/virtual5/: CMakeLists.txt  virtual5.cpp
src/virtual-functions/virtual6/: CMakeLists.txt  virtual6.cpp
