cmake_minimum_required(VERSION 3.10)

#Виртуальные функции и все что с ними связано
add_subdirectory(virtual-functions/virtual1)
add_subdirectory(virtual-functions/virtual2)
add_subdirectory(virtual-functions/virtual3)
add_subdirectory(virtual-functions/virtual4)
add_subdirectory(virtual-functions/virtual5)
add_subdirectory(virtual-functions/virtual6)


add_subdirectory(other/delegating-constructors)