cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)

# Динамические структуры | Односвязный список
add_executable(data-struct__1 data-struct_1.cpp)

# Динамические структуры | Двусвязный список
add_executable(data-struct__2 data-struct_2.cpp)

# Динамические структуры | Стек
add_executable(data-struct__3 data-struct_3.cpp)

# Динамические структуры | Очередь
add_executable(data-struct__4 data-struct_4.cpp)

# Динамические структуры | Кольцевая очередь
add_executable(data-struct__5 data-struct_5.cpp)

# Динамические структуры | Очередь с приоритетом
add_executable(data-struct__6 data-struct_6.cpp)

# Динамические структуры | Дек
add_executable(data-struct__7 data-struct_7.cpp)

# Динамические структуры | Бинарное дерево
add_executable(data-struct__8 data-struct_8.cpp)