cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)

# Vector
add_executable(stl__1 stl_1.cpp)

# Итераторы
add_executable(stl__2 stl_2.cpp)

# List
add_executable(stl__3 stl_3.cpp)

# Forward list (С++11)
add_executable(stl__4 stl_4.cpp)

# Array (С++11)
add_executable(stl__5 stl_5.cpp)

# Deque
add_executable(stl__6 stl_6.cpp)
